--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Martel+Sans|Playfair+Display|Sigmar+One&display=swap');
 *{
    margin: 0;
    padding: 0;
@@ -6,12 +7,13 @@
 
 :root{
    --primaryColor: #FFBA48;
-   --secondaryColor: salmon;
+   --secondaryColor:  #049c09 ;
 }
 
 /* utilities */
 a{
    text-decoration: none;
+   /* color: darkblue; */
 }
 
 li{
@@ -19,8 +21,12 @@ li{
 }
 
 body{
-   background: #333;
-   /* overflow:hidden; */
+   background: #252627;
+   /* background-image: radial-gradient(circle, #0F2027, #203A43, #2C5364); */
+   /* #0F2027
+   #203A43
+   #2C5364 */
+   overflow:hidden;
 }
 
 /* navigation menu */
@@ -97,17 +103,29 @@ header nav ul li a:hover{
 
 /* starting page */
 
+ /* #startBtn{
+   background: pink;
+   position: absolute;
+   width: 100px;
+   height: 100px;
+   border: 1px red solid;
+   
+}  */
+
 #startPage{
-  top:35%;
+  top:45%;
   left:50%;
   transform: translate(-50%,-50%);
   position: absolute;
+  z-index: 2;
 }
 #startPage div h2{
    color: #ccc;
    text-align: center;
-   padding: 4rem;
-   font-size: 3.1rem;
+   padding: 3rem;
+   font-family: 'Playfair Display', serif;
+   letter-spacing: 0.3rem;
+   font-size: 2.5rem;
   
 }
 
@@ -115,12 +133,13 @@ header nav ul li a:hover{
 #startPage a {
    color: #ccc;
    padding: 1rem 2rem;
-   display: inline-block;
+   display: block;
    border:1.5px solid #ccc;
    position: absolute;
    top:125%;
    left:50%;
    transform: translate(-50%,-50%);
+   /* background: red; */
    
 }
 
