--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
 /* navigation menu */
 header{
    background: #222;
+
 }
 
 nav h1 a{
@@ -112,14 +113,40 @@ header nav ul li a:hover{
    
 }  */
 
-#startPage{
-  top:45%;
-  left:50%;
-  transform: translate(-50%,-50%);
-  position: absolute;
-  z-index: 2;
+
+/* canvas::after{
+  box-shadow: inset 110px 90px 250px  #000000, inset -110px -90px 250px #000000;
+
+} */
+
+#boxshadow{
+   height: 100vh;
+   width: 100%;
+   position: absolute;
+   box-shadow: inset 400px 400px 400px  #000000, inset -400px -400px 400px #000000;
+   animation: shadow 1s ease-in-out forwards;
 }
-#startPage div h2{
+
+@keyframes shadow{
+   to{
+      box-shadow: inset 0px 0px 00px  #000000, inset -0px -0px 0px #000000;
+
+   }
+}
+#startPage{
+   top:35%;
+   left:50%;
+ 
+   transform: translate(-50%,-50%);
+   position: absolute;
+   /* border: 1px red solid; */
+   /* border: 1px red solid; */
+   /* z-index: 2; */
+   /* box-shadow: inset 110px 90px 250px  #000000, inset -110px -90px 250px #000000;; */
+   
+ }
+ 
+#startPage h2{
    color: #ccc;
    text-align: center;
    padding: 3rem;
