--- a/style.css
+++ b/style.css
@@ -422,9 +422,10 @@ li.show div {
   display: grid;
   grid-template-columns: repeat(4, auto);
   justify-content: center;
-  grid-gap: 1rem;
+  /* grid-gap: 1rem; */
   align-items: center;
   padding: 2rem;
+  margin: 5rem auto;
 }
 div.project {
   /* border: red solid 1px; */
@@ -443,4 +444,28 @@ div.project {
 }
 .projects:hover {
   transform: scale(1.1);
+}
+
+#modal {
+  background-color: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+#modal.modal-active {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#modal div {
+  color: white;
+}
+
+#modal img {
+  width: 400px;
+  height: 400px;
 }
