--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ body {
 }
 
 /* navigation menu */
-header {
+/* header {
   background: rgb(37, 38, 39);
-}
+} */
 
 nav h1 a {
   font-family: "Poppins", sans-serif;
@@ -92,18 +92,18 @@ header nav ul li a:hover {
   transition: 0.3s ease-in-out;
 }
 
-#boxshadow {
+/* #boxshadow {
   height: 80vh;
   width: 100%;
   position: absolute;
-}
+} */
 
-@keyframes shadow {
+/* @keyframes shadow {
   to {
     box-shadow: inset 0px 0px 00px #000000, inset -0px -0px 0px #000000;
   }
-}
-#startPage {
+} */
+/* #startPage {
   top: 30%;
   left: 50%;
 
@@ -135,7 +135,7 @@ header nav ul li a:hover {
   color: var(--secondaryColor);
   border: 1.5px var(--secondaryColor) solid;
   transition: 0.5s ease-in-out;
-}
+} */
 
 /* About page */
 
@@ -479,6 +479,17 @@ div.project {
   display: flex;
   flex-direction: column;
   position: relative;
+}
+#modal div::before {
+  position: absolute;
+  content: "";
+  right: 5%;
+  top: 0%;
+  width: 10%;
+  height: 80%;
+  background-color: #ffba48;
+  z-index: 0;
+  opacity: 0.6;
 }
 #modal div::after {
   content: "X";
