--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 :root {
   --primaryColor: #ffba48;
@@ -313,6 +316,7 @@ header nav ul li a:hover {
   justify-content: space-evenly;
   align-content: start;
   height: 50vh;
+  /* transition: opacity 1s ease-in-out; */
 }
 
 #WhoAmI div img {
@@ -320,11 +324,11 @@ header nav ul li a:hover {
   height: 125px;
   background: #ebebeb;
   border-radius: 15%;
-  transition: 0.3s ease-in-out;
 }
 
 #WhoAmI div img:hover {
   opacity: 0.3;
+  transition: 0.3s ease-in-out;
 }
 
 /* Time Line */
@@ -350,7 +354,7 @@ header nav ul li a:hover {
   position: relative;
   bottom: 0;
   width: 350px;
-  height: 200px;
+  height: 225px;
   padding: 1rem;
   background: var(--primaryColor);
   transition: all 0.5s ease-in-out;
